The Ticker Race

--- a/The Ticker Race/makefile
+++ b/The Ticker Race/makefile
@@ -1,8 +1,6 @@
-EXTRA_CFLAGS ?= -fsanitize=address -fno-omit-frame-pointer
-
 CXX = g++
 CXXFLAGS = -std=c++17 -pthread -Wall -O2 -g $(EXTRA_CFLAGS)
-TARGET = factory
+TARGET = The_ticket_race
 SOURCES = main.cpp
 
 all: $(TARGET)
@@ -11,7 +9,7 @@ $(TARGET): $(SOURCES)
 	$(CXX) $(CXXFLAGS) $(SOURCES) -o $(TARGET)
 
 zip: 
-	zip hw05.zip *cpp *file
+	zip The_ticket_race.zip *cpp *file
 
 clean:
 	rm -f $(TARGET)
